--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "lets-thrive",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "An open initiative to mentor CS grads/undergrads & people stuck in their dead end tech jobs",
   "version": "0.1.0",
   "author": "Adeel Imran <adeelimranr@gmail.com>",
   "dependencies": {
