--- a/now.json
+++ b/now.json
@@ -1,1 +1,13 @@
-{}
+{
+  "version": 2,
+  "name": "thrive",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@now/static-build",
+      "config": {
+        "distDir": "public"
+      }
+    }
+  ]
+}
