--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "now-build": "npm run build",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "serve": "gatsby serve",
